allow wrapping of edit notes (fixes #71)

--- a/track7.css
+++ b/track7.css
@@ -977,6 +977,10 @@ article>header .guidemeta {
 	content: "\f27b";
 }
 
+.meta .edithistory {
+	white-space: normal;
+}
+
 .meta .edithistory:before {
 	content: "\f044";
 }
